--- a/A1/a1.html
+++ b/A1/a1.html
@@ -12,7 +12,7 @@ uniform float theta;
 void
 main()
 {  
-    float d = dot( vPosition, vPosition );
+    float d = length( vPosition );
     float s = sin( d*theta );
     float c = cos( d*theta );
 
@@ -53,7 +53,7 @@ main()
             <br/>
           t 
             <input id="twist_slider" type="range"
-            min="-2" max="2" step="0.05" value="0" />
+            min="0" max="10" step="0.05" value="0" />
             <br/>
           p
             <input id="primatives_triangles_radio" type="radio" 
@@ -61,16 +61,16 @@ main()
             <input id="primatives_lines_radio" type="radio"
             name="primatives_radio"/>
             <br/>
-          h
-            <input id="holes_checkbox" type="checkbox"/>
-            <br/>
           s
             <input id="shapes_triangle_radio" type="radio" 
             name="shapes_radio" checked="checked"/>
+            <input id="shapes_sierpinski_triangle_radio" type="radio"
+            name="shapes_radio" />
             <input id="shapes_square_radio" type="radio"
             name="shapes_radio"/>
+            <input id="shapes_sierpinski_square_radio" type="radio"
+            name="shapes_radio" />
             <br/>
-                          
 	</div>
   </div>
 </body>
