--- a/A1/a1.html
+++ b/A1/a1.html
@@ -41,37 +41,50 @@ main()
 
 <body>
   <div class="section group">
-	<div class="col span_3_of_4">
+	<div class="col span_5_of_6">
           <canvas id="gl-canvas" width="960" height="960">
             Oops ... your browser doesn't support the HTML5 canvas element
           </canvas>
 	</div>
-	<div class="col span_1_of_4">
-          r 
-            <input id="recursion_slider" type="range"
-             min="0" max="5" step="1" value="0" />
-            <br/>
-          t 
-            <input id="twist_slider" type="range"
-            min="0" max="10" step="0.05" value="0" />
-            <br/>
-          p
-            <input id="primatives_triangles_radio" type="radio" 
-            name="primatives_radio" checked="checked"/>
-            <input id="primatives_lines_radio" type="radio"
-            name="primatives_radio"/>
-            <br/>
-          s
-            <input id="shapes_triangle_radio" type="radio" 
-            name="shapes_radio" checked="checked"/>
-            <input id="shapes_sierpinski_triangle_radio" type="radio"
-            name="shapes_radio" />
-            <input id="shapes_square_radio" type="radio"
-            name="shapes_radio"/>
-            <input id="shapes_sierpinski_square_radio" type="radio"
-            name="shapes_radio" />
-            <br/>
-	</div>
+
+	<div class="col span_1_of_6">
+
+      recursion
+      <input id="recursion_slider" type="range"
+      min="0" max="5" step="1" value="0" />
+      <br/>
+
+      twist
+      <input id="twist_slider" type="range"
+      min="0" max="10" step="0.05" value="0" />
+      <br/>
+
+      primatives
+      <input id="primatives_triangles_radio" type="radio" 
+      name="primatives_radio" checked="checked"/>
+      <input id="primatives_lines_radio" type="radio"
+      name="primatives_radio"/>
+      <br/>
+
+      shapes
+      <input id="shapes_triangle_radio" type="radio" 
+      name="shapes_radio" checked="checked"/>
+      <input id="shapes_sierpinski_triangle_radio" type="radio"
+      name="shapes_radio" />
+      <input id="shapes_square_radio" type="radio"
+      name="shapes_radio"/>
+      <input id="shapes_sierpinski_square_radio" type="radio"
+      name="shapes_radio" />
+      <br/>
+
+      <div class="radio-selector">
+        <input id="visa" type="radio" name="credit-card" value="visa" />
+        <label class="shape visa" for="visa"></label>
+        <input id="mastercard" type="radio" name="credit-card" value="mastercard" />
+        <label class="shape mastercard"for="mastercard"></label>
+      </div>
+
+    </div>
   </div>
 </body>
 </html>
