--- a/A1/a1.html
+++ b/A1/a1.html
@@ -41,47 +41,53 @@ main()
 
 <body>
   <div class="section group">
-	<div class="col span_5_of_6">
-          <canvas id="gl-canvas" width="960" height="960">
+	<div class="col span_4_of_6">
+          <canvas id="gl-canvas" width="768" height="768">
             Oops ... your browser doesn't support the HTML5 canvas element
           </canvas>
 	</div>
 
-	<div class="col span_1_of_6">
+	<div class="col span_2_of_6">
 
-      recursion
+      <b>Recursion:</b>
       <input id="recursion_slider" type="range"
       min="0" max="5" step="1" value="0" />
       <br/>
+      <br/>
 
-      twist
+      <b>Twist:</b>
       <input id="twist_slider" type="range"
       min="0" max="10" step="0.05" value="0" />
       <br/>
+      <br/>
 
-      primatives
+      <b>Primatives:</b>
+      <br/>
+
+
       <input id="primatives_triangles_radio" type="radio" 
       name="primatives_radio" checked="checked"/>
+      triangles
+      <br/>
       <input id="primatives_lines_radio" type="radio"
       name="primatives_radio"/>
+      lines
       <br/>
-
-      shapes
-      <input id="shapes_triangle_radio" type="radio" 
-      name="shapes_radio" checked="checked"/>
-      <input id="shapes_sierpinski_triangle_radio" type="radio"
-      name="shapes_radio" />
-      <input id="shapes_square_radio" type="radio"
-      name="shapes_radio"/>
-      <input id="shapes_sierpinski_square_radio" type="radio"
-      name="shapes_radio" />
+      <br/> 
+      
+      <b>Shape:</b>
       <br/>
-
+      <br/>
+ 
       <div class="radio-selector">
-        <input id="visa" type="radio" name="credit-card" value="visa" />
-        <label class="shape visa" for="visa"></label>
-        <input id="mastercard" type="radio" name="credit-card" value="mastercard" />
-        <label class="shape mastercard"for="mastercard"></label>
+        <input id="shapes_triangle_radio" type="radio" name="shapes_radio" checked="checked" value="shapes_triangle_radio" />
+        <label class="shape triangle" for="shapes_triangle_radio"></label>        
+        <input id="shapes_sierpinski_triangle_radio" type="radio" name="shapes_radio" value="shapes_sierpinski_triangle_radio" />
+        <label class="shape sierpenski_triangle" for="shapes_sierpinski_triangle_radio"></label>
+        <input id="shapes_square_radio" type="radio" name="shapes_radio" value="shapes_square_radio" />
+        <label class="shape square"for="shapes_square_radio"></label>
+        <input id="shapes_sierpinski_square_radio" type="radio" name="shapes_radio" value="shapes_sierpinski_square_radio" />
+        <label class="shape sierpenski_square" for="shapes_sierpinski_square_radio"></label>
       </div>
 
     </div>
