--- a/A2/a2.html
+++ b/A2/a2.html
@@ -17,7 +17,7 @@ main()
 {
     gl_Position = vPosition;
     fColor = vColor;
-    gl_PointSize = 10.0;
+//    gl_PointSize = 10.0;
 }
 </script>
 
@@ -44,5 +44,15 @@ main()
 <canvas id="gl-canvas" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
+<br/>
+<div id="colors">
+  <div class="color_div black"></div>
+  <div class="color_div red"></div>
+  <div class="color_div yellow"></div>
+  <div class="color_div green"></div>
+  <div class="color_div cyan"></div>
+  <div class="color_div blue"></div>
+  <div class="color_div magenta"></div>
+</div>
 </body>
 </html>
