--- a/A2/a2.html
+++ b/A2/a2.html
@@ -41,7 +41,7 @@ main()
 <script type="text/javascript" src="a2.js"></script>
 </head>
 <body>
-<canvas id="gl-canvas" width="512" height="512">
+<canvas id="gl-canvas" class="board" width="512" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <br/>
