--- a/A2/a2.html
+++ b/A2/a2.html
@@ -47,12 +47,19 @@ Oops ... your browser doesn't support the HTML5 canvas element
 <br/>
 <div id="colors">
   <div class="color_div black"></div>
+  <div class="color_div gray"></div>
   <div class="color_div red"></div>
+  <div class="color_div orange"></div>
   <div class="color_div yellow"></div>
+  <div class="color_div light_green"></div>
   <div class="color_div green"></div>
+  <div class="color_div teal"></div>
   <div class="color_div cyan"></div>
+  <div class="color_div light_blue"></div>  
   <div class="color_div blue"></div>
+  <div class="color_div violet"></div>
   <div class="color_div magenta"></div>
+  <div class="color_div pink"></div>
 </div>
 </body>
 </html>
