--- a/A2/a2.html
+++ b/A2/a2.html
@@ -73,14 +73,20 @@ Oops ... your browser doesn't support the HTML5 canvas element
   <div class="color_div pink"></div>
 </div>
 <br/>
-<div id="brushes">
-  <input type="radio" name="brush" checked="checked" value="0" />
-  <input type="radio" name="brush" value="1" />
-  <input type="radio" name="brush" value="2" />
+<div id="brushes" class="button_div">
+  <div class="seperator"></div>
+  <b>Chalk Size:</b>
+  <div class="hseperator"></div>
+  S<input type="radio" name="brush" checked="checked" value="0" />
+  <div class="hseperator"></div>
+  M<input type="radio" name="brush" value="1" />
+  <div class="hseperator"></div>
+  L<input type="radio" name="brush" value="2" />
 </div>
-<div>
+<div class="button_div">
+  <div class="seperator"></div>
+  <div class="tseperator"></div>
   <input id="clear" type="button" value="Clear"/>
 </div>
-<input id="twist_slider" type="range" min="0" max="5" step="0.05" value="0" />
 </body>
 </html>
