--- a/A3/a3.html
+++ b/A3/a3.html
@@ -6,13 +6,45 @@
 <title>Assignment 3</title>
 
 <script id="vertex-shader" type="x-shader/x-vertex">
+
 attribute vec4 vPosition;
 attribute vec4 vColor;
 varying vec4 fColor;
+uniform vec3 theta;
+uniform vec4 translation;
+
 void
 main()
 {  
-    gl_Position = vPosition;
+// Compute the sines and cosines of theta for each of
+    //   the three axes in one computation.
+    vec3 angles = radians( theta );
+    vec3 c = cos( angles );
+    vec3 s = sin( angles );
+
+    // Remeber: thse matrices are column-major
+    mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
+		    0.0,  c.x,  s.x, 0.0,
+		    0.0, -s.x,  c.x, 0.0,
+		    0.0,  0.0,  0.0, 1.0 );
+
+    mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
+		    0.0, 1.0,  0.0, 0.0,
+		    s.y, 0.0,  c.y, 0.0,
+		    0.0, 0.0,  0.0, 1.0 );
+
+
+    mat4 rz = mat4( c.z, -s.z, 0.0, 0.0,
+		    s.z,  c.z, 0.0, 0.0,
+		    0.0,  0.0, 1.0, 0.0,
+		    0.0,  0.0, 0.0, 1.0 );
+
+    mat4 t = mat4(1.0, 0.0, 0.0, translation.x,
+                  0.0, 1.0, 0.0, translation.y,
+                  0.0, 0.0, 1.0, 0.0,
+                  0.0, 0.0, 0.0, 1.0 );
+
+    gl_Position = rz * ry * rx * vPosition + translation;
     fColor = vColor;
 }
 </script>
