--- a/A3/a3.html
+++ b/A3/a3.html
@@ -12,6 +12,7 @@ attribute vec4 vColor;
 varying vec4 fColor;
 uniform vec3 theta;
 uniform vec4 translation;
+uniform vec3 scale;
 
 void
 main()
@@ -24,22 +25,27 @@ main()
 
     // Remeber: thse matrices are column-major
     mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
-		    0.0,  c.x,  s.x, 0.0,
-		    0.0, -s.x,  c.x, 0.0,
-		    0.0,  0.0,  0.0, 1.0 );
+            0.0,  c.x,  s.x, 0.0,
+            0.0, -s.x,  c.x, 0.0,
+            0.0,  0.0,  0.0, 1.0 );
 
     mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
-		    0.0, 1.0,  0.0, 0.0,
-		    s.y, 0.0,  c.y, 0.0,
-		    0.0, 0.0,  0.0, 1.0 );
+            0.0, 1.0,  0.0, 0.0,
+            s.y, 0.0,  c.y, 0.0,
+            0.0, 0.0,  0.0, 1.0 );
 
 
     mat4 rz = mat4( c.z, -s.z, 0.0, 0.0,
-		    s.z,  c.z, 0.0, 0.0,
-		    0.0,  0.0, 1.0, 0.0,
-		    0.0,  0.0, 0.0, 1.0 );
+            s.z,  c.z, 0.0, 0.0,
+            0.0,  0.0, 1.0, 0.0,
+            0.0,  0.0, 0.0, 1.0 );
+            
+    mat4 sc = mat4( scale.x, 0.0, 0.0, 0.0,
+            0.0,  scale.y, 0.0, 0.0,
+            0.0,  0.0, scale.z, 0.0,
+            0.0,  0.0, 0.0, 1.0 );
 
-    gl_Position = rz * ry * rx * vPosition + translation;
+    gl_Position = sc * rz * ry * rx * vPosition + translation;
     fColor = vColor;
 }
 </script>
@@ -67,6 +73,15 @@ main()
   <canvas id="gl-canvas" width="768" height="768">
     Oops ... your browser doesn't support the HTML5 canvas element
   </canvas>
-
+  <br/>
+  <input id="cube" type="radio" name="model_radio" checked="checked"/> cube
+  <input id="sphere" type="radio" name="model_radio"/> sphere
+  <input id="cylinder" type="radio" name="model_radio"/> cylinder
+  <br/>
+  scale:<input id="scaler" type="range" min="0.1" max="5" step="0.1" value="1" />
+  <br/>
+  rx:<input id="rx" type="range" min="0" max="360" step="1" value="0" />
+  ry:<input id="ry" type="range" min="0" max="360" step="1" value="0" />
+  rz:<input id="rz" type="range" min="0" max="360" step="1" value="0" />
 </body>
 </html>
