--- a/A3/a3.html
+++ b/A3/a3.html
@@ -74,14 +74,33 @@ main()
     Oops ... your browser doesn't support the HTML5 canvas element
   </canvas>
   <br/>
+  <div id="colors">
+      <div style=
+      <div class="color_div white"></div>
+      <div class="color_div gray"></div>
+      <div class="color_div red"></div>
+      <div class="color_div orange"></div>
+      <div class="color_div yellow"></div>
+      <div class="color_div light_green"></div>
+      <div class="color_div green"></div>
+      <div class="color_div teal"></div>
+      <div class="color_div cyan"></div>
+      <div class="color_div light_blue"></div>  
+      <div class="color_div blue"></div>
+      <div class="color_div violet"></div>
+      <div class="color_div magenta"></div>
+      <div class="color_div pink"></div>
+  </div>
   <input id="cube" type="radio" name="model_radio" checked="checked"/> cube
   <input id="sphere" type="radio" name="model_radio"/> sphere
   <input id="cylinder" type="radio" name="model_radio"/> cylinder
   <br/>
   scale:<input id="scaler" type="range" min="0.1" max="5" step="0.1" value="1" />
   <br/>
-  rx:<input id="rx" type="range" min="0" max="360" step="1" value="0" />
-  ry:<input id="ry" type="range" min="0" max="360" step="1" value="0" />
-  rz:<input id="rz" type="range" min="0" max="360" step="1" value="0" />
+  rx:<input id="rx" type="range" min="0" max="360" step="1" value="45" />
+  ry:<input id="ry" type="range" min="0" max="360" step="1" value="45" />
+  rz:<input id="rz" type="range" min="0" max="360" step="1" value="30" />
+  <br/>
+
 </body>
 </html>
