--- a/A4/a4.html
+++ b/A4/a4.html
@@ -17,33 +17,33 @@ uniform vec3 scale;
 void
 main()
 {  
-    //vec3 angles = radians( theta );
-    //vec3 c = cos( angles );
-    //vec3 s = sin( angles );
+    vec3 angles = radians( theta );
+    vec3 c = cos( angles );
+    vec3 s = sin( angles );
     
-    //mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
-    //        0.0,  c.x,  s.x, 0.0,
-    //        0.0, -s.x,  c.x, 0.0,
-    //        0.0,  0.0,  0.0, 1.0 );
+    mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
+            0.0,  c.x,  s.x, 0.0,
+            0.0, -s.x,  c.x, 0.0,
+            0.0,  0.0,  0.0, 1.0 );
 
-    //mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
-    //        0.0, 1.0,  0.0, 0.0,
-    //        s.y, 0.0,  c.y, 0.0,
-    //        0.0, 0.0,  0.0, 1.0 );
+    mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
+            0.0, 1.0,  0.0, 0.0,
+            s.y, 0.0,  c.y, 0.0,
+            0.0, 0.0,  0.0, 1.0 );
 
 
-    //mat4 rz = mat4( c.z, -s.z, 0.0, 0.0,
-    //        s.z,  c.z, 0.0, 0.0,
-    //        0.0,  0.0, 1.0, 0.0,
-    //        0.0,  0.0, 0.0, 1.0 );
+    mat4 rz = mat4( c.z, -s.z, 0.0, 0.0,
+            s.z,  c.z, 0.0, 0.0,
+            0.0,  0.0, 1.0, 0.0,
+            0.0,  0.0, 0.0, 1.0 );
             
-    //mat4 sc = mat4( scale.x, 0.0, 0.0, 0.0,
-    //        0.0,  scale.y, 0.0, 0.0,
-    //        0.0,  0.0, scale.z, 0.0,
-    //        0.0,  0.0, 0.0, 1.0 );
+    mat4 sc = mat4( scale.x, 0.0, 0.0, 0.0,
+            0.0,  scale.y, 0.0, 0.0,
+            0.0,  0.0, scale.z, 0.0,
+            0.0,  0.0, 0.0, 1.0 ) ;
 
     //gl_Position = sc * rz * ry * rx * vPosition + translation;
-    gl_Position = vPosition;
+    gl_Position = sc * rz * ry * rx * vPosition + translation;
     //fColor = vColor;
 }
 </script>
