--- a/A5/a5.html
+++ b/A5/a5.html
@@ -34,5 +34,6 @@
     <canvas id="gl-canvas" width="768" height="768">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
+    <img src="assets/bw_checker.png" hidden/>
   </body>
 </html>
