--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <a href="A2/a2.html">A2</a><br/>
     <a href="A3/a3.html">A3</a><br/>
     <a href="A4/a4.html">A4</a><br/>
-    <a href="A5/a5.html">A5</a><br/>
+    <a href="A5/a5_1.html">A5_1</a><br/>
+    <a href="A5/a5_2.html">A5_2</a><br/>
+    <a href="A5/a5_3.html">A5_3</a><br/>
   </body>
 
